# CPUPowerDemo

./: CMakeLists.txt  study.md
cpu_prez/: index.html  plot_times.py
cpu_prez/images/: ilp.xlsx  p4.pdn  reads.pdn  updates.pdn  updates2.pdn  updates3.pdn
include/: float8.h  measure.h  utilities.h
results/: V0_debug.txt  V0_release.txt  V1.txt  V2.txt  V3.txt  V4.txt  V5.txt  V6.txt  plot_results.py
src/: main.cpp  utilities.cpp
